<resources>
    <string name="app_name">Frozen Vault</string>
    <string name="add_a_password">Add a Password</string>
    <string name="passwords_list_placeholder">You don\'t have any passwords yet.</string>
    <string name="service_name">Service Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="field_required">Field is required.</string>
    <string name="password_to_short">Passwords must be at least 8 characters.</string>
    <string name="access_history">Access History</string>
    <string name="update_history">Update History</string>
    <string name="clear">Clear History</string>
    <string name="no_history_to_display">No history to display.</string>
    <string name="invalid_password">Invalid password. Try Again.</string>
    <string name="view_failed_login_attempts">View Failed Login Attempts</string>
    <string name="view_login_history">View Unlock History</string>
    <string name="login_history">Unlock History</string>
    <string name="failed_login_attempts">Failed Unlock Attempts</string>
    <string name="wipe_all_data">Wipe All Data</string>
    <string name="change_password">Change Password</string>
    <string name="recovery_keys">Recovery Keys</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_mismatch">Passwords don\'t match.</string>
    <string name="password_changed">Password changed.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="generate_random_password">Generate Random Password</string>
    <string name="numbers">Numbers</string>
    <string name="symbols">Symbols</string>
    <string name="welcome_to_frozen_passwords">Welcome To Frozen Vault</string>
    <string name="start_using">Start Using Frozen Vault</string>
    <string name="eight_char_min">Should be 8 characters at minimum.</string>
    <string name="password_to_unlock">Password used to unlock the app.</string>
    <string name="password_saved">Password saved successfully!</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="lock_confirmation_title">Lock Frozen Vault?</string>
    <string name="lock_dialog">Do you want to return to the lock screen?</string>
    <string name="delete_confirmation_title">Delete?</string>
    <string name="delete_dialog">Do you really want to delete this item? This can not be undone.</string>
    <string name="positive_action">Yes</string>
    <string name="negative_action">No</string>
    <string name="leave_without_saving_dialog">Do you want to leave? Changes will not be saved.</string>
    <string name="leave_without_saving_title">Warning</string>
    <string name="get_started_text">We\'ll start by creating an unlock password.\nYou\'ll be asked to enter this password in order to unlock your vault.</string>
    <string name="lets_go">Lets Go</string>
    <string name="lets_get_started">Let\s Get Started!</string>
    <string name="unlock_you_vault">Unlock Your Vault</string>
    <string name="new_recovery_key">New Recovery Key</string>
    <string name="print">Print</string>
    <string name="recovery_key_description">If you forget your password you can scan this QR code to recover your account. It is highly recommended to print and keep this in a safe place.</string>
    <string name="authenticate">Authenticate</string>
    <string name="create">Create</string>
    <string name="no_recovery_keys_to_display">No Recovery Keys To Display</string>
    <string name="delete">Delete</string>
    <string name="unused">Unused Keys</string>
    <string name="used">Used Keys</string>
    <string name="all">All Keys</string>
</resources>
