<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="24dp">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/settingsThemeToggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:singleSelection="true"
        app:checkedButton="@id/settingsSystemThemeButton">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsLightThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/ic_lightmode_24dp"
            android:text="@string/light"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsDarkThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_nightmode_24dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/dark"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsSystemThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/ic_systemtheme_24dp"
            android:text="@string/system"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsBioLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_fingerprint_black_24dp"
        app:iconGravity="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settingsRecoveryKeysButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/biometric_login"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsRecoveryKeysButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settingsChangePasswordButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/recovery_keys"
        app:icon="@drawable/ic_recovery_key_24dp"
        app:iconGravity="textStart"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsChangePasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settingsViewLoginHistoryButton"
        android:text="@string/change_password"
        app:icon="@drawable/ic_account_box_black_24dp"
        app:iconGravity="textStart"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsViewLoginHistoryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/settingsViewFailedLoginAttemptsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/view_login_history"
        app:icon="@drawable/ic_login_history_24dp"
        app:iconGravity="textStart"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsViewFailedLoginAttemptsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settingsWipeDataButton"
        android:text="@string/view_failed_login_attempts"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:icon="@drawable/ic_failed_login_attempts_24dp"
        app:iconGravity="textStart"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsWipeDataButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/wipe_all_data"
        app:icon="@drawable/ic_delete_black_24dp"
        app:iconGravity="textStart"/>

</androidx.constraintlayout.widget.ConstraintLayout>