<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextTitle"
        android:text="@string/new_recovery_key"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recovery_key_description"
        android:textStyle="italic"/>

    <ProgressBar
        android:id="@+id/recoveryCreateSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/recoveryCreateQRCode"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recoveryCreatePrintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_print_black_24dp"
        app:iconGravity="textStart"
        android:text="@string/print"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>