<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/generatorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/generate_random_password"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/generatorCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_close_24" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/generatorIncludeNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/numbers"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/generatorTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/generatorIncludeSymbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/symbols"
        app:layout_constraintTop_toBottomOf="@id/generatorIncludeNumbers"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/generatorCharLength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/generatorIncludeNumbers"
        app:layout_constraintBottom_toBottomOf="@id/generatorIncludeNumbers"
        app:layout_constraintStart_toEndOf="@id/generatorIncludeNumbers"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/generatorCharLengthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/generatorCharLength"
        app:layout_constraintStart_toStartOf="@id/generatorCharLength"
        app:layout_constraintEnd_toEndOf="@id/generatorCharLength"
        android:textStyle="italic"
        android:text="8 Characters"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/generatorDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_done_black_24dp"
        app:iconGravity="textStart"
        android:text="@string/generate"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintTop_toBottomOf="@id/generatorIncludeSymbols"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>