<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/passwordCellService"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Facebook"
            android:maxLines="2"
            android:ellipsize="end"
            android:theme="@style/TextTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/passwordCellDelete" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/passwordCellCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Created 01/01/2020"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordCellService" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/passwordCellUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Updated 01/04/2020"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordCellCreated" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordCellUsernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/passwordCellUpdated">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordCellUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordCellPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordCellUsernameLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordCellPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/passwordCellCopy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_content_copy_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="?android:attr/textColorPrimary"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/passwordCellEdit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/passwordCellCopy"
            app:layout_constraintTop_toTopOf="@id/passwordCellCopy"
            android:tint="?android:attr/textColorPrimary"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/passwordCellDelete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_delete_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/passwordCellEdit"
            app:layout_constraintTop_toTopOf="@id/passwordCellEdit"
            android:layout_marginEnd="24dp"
            android:tint="?android:attr/textColorPrimary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/passwordCellAccessHistoryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/passwordCellPasswordLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/passwordCellUpdateHistoryButton"
            android:text="@string/access_history"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/passwordCellUpdateHistoryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update_history"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordCellPasswordLayout"
            app:layout_constraintStart_toEndOf="@id/passwordCellAccessHistoryButton"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/passwordCellToggleItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:constraint_referenced_ids="passwordCellPasswordLayout,passwordCellUsernameLayout,
             passwordCellAccessHistoryButton, passwordCellUpdateHistoryButton"
            android:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>